Update charm examples based on recent changes

--- a/examples/apache-httpd/Makefile
+++ b/examples/apache-httpd/Makefile
@@ -1,7 +1,7 @@
 build:
-	rm -fr lib/op
-	cp -r ../../op lib/
+	rm -fr lib/ops
+	cp -r ../../ops lib/
 	# pip3 install --upgrade --target lib/ charmhelpers
 clean:
-	rm -fr lib/op
+	rm -fr lib/ops
 
